Css file updated, easter egg included

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/main.css">
     <title>The Irish Getter Setters</title>
 </head>
 <body>
-    <h1>The Irish Getter Setters</h1>
+    <h1>The Irish Getter <a href="./assets/irishsetter.jpg" >Setters</a></h1>
     <h2>Team Code</h2>
     <p>if (project.Coders == irishGetterSetters)</p>
     <p style ="margin-left: 10px;">{</p>
@@ -19,6 +20,5 @@
     <h4>Findley Griffiths</h4>
     <p>Findley is an aspiring software developer with a mind for developing secure applications.  Having completed the Cybersecurity program, and currently enrolled in the Software Development program at <a href="https://elevenfifty.org">Eleven Fifty Academy</a> he is looking forward to solving problems in the tech industry.</p>
 
-    <p>hacksaw was here</p>
 </body>
 </html>
